// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests in GifGrid should display correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    One punch
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Tests in GifGrid should show items when the images are loaded useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    One punch
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Gianluca Bebe"
      url="https://www.images.com/bebe.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Gianluca Bebe"
      url="https://www.images.com/bebe.jpg"
    />
  </div>
</Fragment>
`;
